test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class:  nginx
spec:
  defaultBackend:
    service:
      name: coffee-svc
      port:
        number: 80
